Modificado: Vista, getCategory y swagger
